--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
         <div class="proceed">
           <button>PROCEED</button>
+          <p>ciao</p>
         </div>
       </div>
     </main>
