--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/style-questions.css" />
   </head>
 
   <body>
@@ -12,31 +12,15 @@
       <div class="logo">
         <img src="./img/epicode_logo.png" alt="logoEpicode" />
       </div>
-
       <div class="titles">
-        <h1>Welcome to</h1>
-        <h2>your exam</h2>
+        <h1>How can I create a</h1>
+        <h2>checkbox in HTML?</h2>
       </div>
-
-      <h3>Instructions</h3>
-
-      <div class="instructions">
-        <p>We don't expect most engineers to know the answers to all of these <br />questions, so don't worry if you're unsure of a few of them.</p>
-        <ul>
-          <li>Each question is <span class="highlighted">timed</span> and can only be <span class="highlighted">answered once.</span></li>
-          <li>Changing browser tab or opening other windows will <span class="highlighted">invalidate the question.</span></li>
-          <li>This exam will take approx. <span class="highlighted">0-5 minutes.</span></li>
-        </ul>
-      </div>
-
-      <div class="footer">
-        <div class="checkbox-container">
-          <input type="checkbox" name="checkbox" id="checkbox" /> <label for="checkbox">I promise to answer myself without help from anyone</label>
-        </div>
-        <div class="proceed">
-          <button>PROCEED</button>
-          <p>ciao</p>
-        </div>
+      <div class="questions-container">
+        <div class="questions-btn"><button>1</button></div>
+        <div class="questions-btn"><button>2</button></div>
+        <div class="questions-btn"><button>3</button></div>
+        <div class="questions-btn"><button>4</button></div>
       </div>
     </main>
   </body>
