adds html, css, js first question

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome Page</title>
+    <title>Questions Page</title>
     <link rel="stylesheet" href="./assets/style-questions.css" />
   </head>
 
@@ -13,15 +13,20 @@
         <img src="./img/epicode_logo.png" alt="logoEpicode" />
       </div>
       <div class="titles">
-        <h1>How can I create a</h1>
-        <h2>checkbox in HTML?</h2>
+        <h1>What does CPU</h1>
+        <h2>stand for?</h2>
       </div>
-      <div class="questions-container">
-        <div class="questions-btn"><button>1</button></div>
-        <div class="questions-btn"><button>2</button></div>
-        <div class="questions-btn"><button>3</button></div>
-        <div class="questions-btn"><button>4</button></div>
+      <div id="questions-container">
+        <div class="questions-box">
+          <button class="btn1">Central Processing Unit</button>
+          <button class="btn2">Central Process Unit</button>
+        </div>
+        <div class="questions-box">
+          <button class="btn3">Computer Personal Unit</button>
+          <button class="btn4">Central Processor Unit</button>
+        </div>
       </div>
     </main>
+    <script src="./assets/script-questions.js"></script>
   </body>
 </html>
