html and css completed

--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/welcome-page-style.css" />
   </head>
 
   <body>
@@ -31,12 +31,13 @@
 
       <div class="footer">
         <div class="checkbox-container">
-          <input type="checkbox" name="checkbox" id="checkbox" /> <label for="checkbox">I promise to answer myself without help from anyone</label>
+          <label for="checkbox"><input type="checkbox" name="checkbox" id="checkbox" /> I promise to answer myself without help from anyone</label>
         </div>
         <div class="proceed">
           <button>PROCEED</button>
         </div>
       </div>
     </main>
+    <script src="./assets/welcome-page-script.js"></script>
   </body>
 </html>
