welcome page completed
waiting to link the next page once it's ready

--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -34,7 +34,7 @@
           <label for="checkbox"><input type="checkbox" name="checkbox" id="checkbox" /> I promise to answer myself without help from anyone</label>
         </div>
         <div class="proceed">
-          <button>PROCEED</button>
+          <button disabled>PROCEED</button>
         </div>
       </div>
     </main>
