adds hover on the buttons

--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Questions Page</title>
-    <link rel="stylesheet" href="./assets/style-questions.css" />
+    <link rel="stylesheet" href="./assets/style-quiz.css" />
   </head>
 
   <body>
@@ -13,20 +13,24 @@
         <img src="./img/epicode_logo.png" alt="logoEpicode" />
       </div>
       <div class="titles">
-        <h1>What does CPU</h1>
-        <h2>stand for?</h2>
+        <h1>What does CPU <br>
+          <span class=bold-text>stand for?</h1>
+        <h2></h2>
       </div>
       <div id="questions-container">
         <div class="questions-box">
-          <button class="btn1">Central Processing Unit</button>
-          <button class="btn2">Central Process Unit</button>
+          <button class="btn1"></button>
+          <button class="btn2"></button>
         </div>
         <div class="questions-box">
-          <button class="btn3">Computer Personal Unit</button>
-          <button class="btn4">Central Processor Unit</button>
+          <button class="btn3"></button>
+          <button class="btn4"></button>
         </div>
       </div>
     </main>
-    <script src="./assets/script-questions.js"></script>
+    <div class="question-counter">
+      <p>QUESTION <span class="score">1</span><span style="color: #b51289"> / 10</span></p>
+    </div>
+    <script src="./assets/script-quiz.js"></script>
   </body>
 </html>
