--- a/quiz.html
+++ b/quiz.html
@@ -13,8 +13,8 @@
         <img src="./img/epicode_logo.png" alt="logoEpicode" />
       </div>
       <div class="titles">
-        <h1>What does CPU <br>
-          <span class=bold-text>stand for?</h1>
+        <h1> <br>
+          <span id="bold-text"></h1>
         <h2></h2>
       </div>
       <div id="questions-container">
@@ -29,7 +29,7 @@
       </div>
     </main>
     <div class="question-counter">
-      <p>QUESTION <span class="score">1</span><span style="color: #b51289"> / 10</span></p>
+      <p>QUESTION <span class="score"></span><span style="color: #b51289"> / 10</span></p>
     </div>
     <script src="./assets/script-quiz.js"></script>
   </body>
