--- a/quiz.html
+++ b/quiz.html
@@ -13,9 +13,7 @@
         <img src="./img/epicode_logo.png" alt="logoEpicode" />
       </div>
       <div class="titles">
-        <h1> <br>
-          <span id="bold-text"></h1>
-        <h2></h2>
+        <h1></h1>
       </div>
       <div id="questions-container">
         <div class="questions-box">
@@ -29,7 +27,7 @@
       </div>
     </main>
     <div class="question-counter">
-      <p>QUESTION <span class="score"></span><span style="color: #b51289"> / 10</span></p>
+      <p>QUESTION <span class="score">1</span><span style="color: #b51289"> / 10</span></p>
     </div>
     <script src="./assets/script-quiz.js"></script>
   </body>
