--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,16 @@
       <div class="logo">
         <img src="./img/epicode_logo.png" alt="logoEpicode" />
       </div>
+      <div class="container">
+        <div class="timer-container">
+          <svg width="150" height="150">
+            <circle class="circle-bg" cx="75" cy="75" r="50"></circle>
+            <circle class="circle" cx="75" cy="75" r="50"></circle>
+          </svg>
+          <div class="timer-text" id="timer">16</div>
+        </div>
+      </div>
+
       <div class="titles">
         <h1></h1>
       </div>
