--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Questions Page</title>
-    <link rel="stylesheet" href="./assets/style-quiz.css" />
+    <link rel="stylesheet" href="./assets/css/style-quiz.css" />
   </head>
 
   <body>
@@ -39,6 +39,6 @@
     <div class="question-counter">
       <p>QUESTION <span class="score">1</span><span style="color: #b51289"> / 10</span></p>
     </div>
-    <script src="./assets/script-quiz.js"></script>
+    <script src="./assets/js/script-quiz.js"></script>
   </body>
 </html>
