--- a/index.feedbackpage.html
+++ b/index.feedbackpage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/feedback.css" />
+    <link rel="stylesheet" href="assets/css/feedback.css" />
     <title>Feedback Page</title>
   </head>
   <body>
@@ -47,5 +47,5 @@
       </div>
     </main>
   </body>
-  <script src="./feedback.js"></script>
+  <script src="assets/js/feedback.js"></script>
 </html>
