test all united

--- a/index.feedbackpage.html
+++ b/index.feedbackpage.html
@@ -47,5 +47,5 @@
       </div>
     </main>
   </body>
-  <script src="./feedback.js"></script>
+  <script src="./assets/js/feedback.js"></script>
 </html>
