--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div class="logo">
-        <img src="./img/epicode_logo.png" alt="logoEpicode" />
+        <img src="./assets/img/epicode_logo.png" alt="logoEpicode" />
       </div>
       <div class="container">
         <div class="timer-container">
