--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -10,9 +10,8 @@
   <body>
     <main>
       <div class="logo">
-        <img src="./img/epicode_logo.png" alt="logoEpicode" />
+        <img src="./assets/img/epicode_logo.png" alt="logoEpicode" />
       </div>
-
       <div class="titles">
         <h1>Welcome to</h1>
         <h2>your exam</h2>
