--- a/index.feedbackpage.html
+++ b/index.feedbackpage.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="logo">
-      <img src="./img/epicode_logo.png" alt="logoEpicode" />
+      <img src="./assets/img/epicode_logo.png" alt="logoEpicode" />
     </div>
     <main>
       <h1>Tell us how it's going</h1>
@@ -18,16 +18,16 @@
       </h3>  
         <div id="rating-container">
         
-        <img class="star" data-value="1" src="img/star.svg" alt="Stella 1">
-        <img class="star" data-value="2" src="img/star.svg" alt="Stella 2">
-        <img class="star" data-value="3" src="img/star.svg" alt="Stella 3">
-        <img class="star" data-value="4" src="img/star.svg" alt="Stella 4">
-        <img class="star" data-value="5" src="img/star.svg" alt="Stella 5">
-        <img class="star" data-value="6" src="img/star.svg" alt="Stella 6">
-        <img class="star" data-value="7" src="img/star.svg" alt="Stella 7">
-        <img class="star" data-value="8" src="img/star.svg" alt="Stella 8">
-        <img class="star" data-value="9" src="img/star.svg" alt="Stella 9">
-        <img class="star" data-value="10" src="img/star.svg" alt="Stella 10">
+        <img class="star" data-value="1" src="./assets/img/star.svg" alt="Stella 1">
+        <img class="star" data-value="2" src="./assets/img/star.svg" alt="Stella 2">
+        <img class="star" data-value="3" src="./assets/img/star.svg" alt="Stella 3">
+        <img class="star" data-value="4" src="./assets/img/star.svg" alt="Stella 4">
+        <img class="star" data-value="5" src="./assets/img/star.svg" alt="Stella 5">
+        <img class="star" data-value="6" src="./assets/img/star.svg" alt="Stella 6">
+        <img class="star" data-value="7" src="./assets/img/star.svg" alt="Stella 7">
+        <img class="star" data-value="8" src="./assets/img/star.svg" alt="Stella 8">
+        <img class="star" data-value="9" src="./assets/img/star.svg" alt="Stella 9">
+        <img class="star" data-value="10" src="./assets/img/star.svg" alt="Stella 10">
     </div>
     <p id="selected-rating">Hai selezionato: <span id="rating-value">0</span></p>
 
