--- a/index.results.html
+++ b/index.results.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <div class="logo">
-        <img src="./img/epicode_logo.png" alt="logoEpicode" />
+        <img src="./assets/img/epicode_logo.png" alt="logoEpicode" />
       </div>
       <div class="title">
         <h1>Results</h1>
