funzione tasto feedback

--- a/index.feedbackpage.html
+++ b/index.feedbackpage.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="moreinfo">
-        <button type="submit">MORE INFO</button>
+        <button id="submit-feedback" type="submit">MORE INFO</button>
       </div>
     </main>
   </body>
