--- a/quiz.html
+++ b/quiz.html
@@ -12,13 +12,19 @@
       <div class="logo">
         <img src="./img/epicode_logo.png" alt="logoEpicode" />
       </div>
+      <!-- Modifica il SVG e i cerchi -->
       <div class="container">
         <div class="timer-container">
-          <svg width="150" height="150">
-            <circle class="circle-bg" cx="75" cy="75" r="50"></circle>
-            <circle class="circle" cx="75" cy="75" r="50"></circle>
+          <svg width="180" height="180">
+            <!-- Aumentate da 150 a 180 -->
+            <circle class="circle-bg" cx="90" cy="90" r="70"></circle>
+            <!-- Aumentati da 75,75,60 a 90,90,70 -->
+            <circle class="circle" cx="90" cy="90" r="70"></circle>
+            <!-- Aumentati da 75,75,60 a 90,90,70 -->
           </svg>
-          <div class="timer-text" id="timer">16</div>
+          <div class="timer-label seconds-label">SECONDS</div>
+          <div class="timer-text" id="timer">40</div>
+          <div class="timer-label remaining-label">REMAINING</div>
         </div>
       </div>
 
