--- a/quiz.html
+++ b/quiz.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Questions Page</title>
-    <link rel="stylesheet" href="./assets/style-quiz.css" />
+    <link rel="stylesheet" href="./assets/css/style-quiz.css" />
   </head>
 
   <body>
     <main>
       <div class="logo">
-        <img src="./img/epicode_logo.png" alt="logoEpicode" />
+        <img src="./assets/img/epicode_logo.png" alt="logoEpicode" />
       </div>
 
       <div class="container">
@@ -42,6 +42,6 @@
     <div class="question-counter">
       <p>QUESTION <span class="score">1</span><span style="color: #b51289"> / 10</span></p>
     </div>
-    <script src="./assets/script-quiz.js"></script>
+    <script src="./assets/js/script-quiz.js"></script>
   </body>
 </html>
