--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="./assets/welcome-page-style.css" />
+    <link rel="stylesheet" href="./assets/css/welcome-page-style.css" />
   </head>
 
   <body>
     <main>
       <div class="logo">
-        <img src="./img/epicode_logo.png" alt="logoEpicode" />
+        <img src="./assets/img/epicode_logo.png" alt="logoEpicode" />
       </div>
 
       <div class="titles">
@@ -38,6 +38,6 @@
         </div>
       </div>
     </main>
-    <script src="./assets/welcome-page-script.js"></script>
+    <script src="./assets/js/welcome-page-script.js"></script>
   </body>
 </html>
