adds difficulties buttons

--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -28,13 +28,18 @@
           <li>This exam will take approx. <span class="highlighted">0-5 minutes.</span></li>
         </ul>
       </div>
-
+      <div class="difficulties-container">
+        <p>Select difficulty level:</p>
+        <button class="easy-btn">Easy</button>
+        <button class="medium-btn">Medium</button>
+        <button class="hard-btn">Hard</button>
+      </div>
       <div class="footer">
         <div class="checkbox-container">
           <label for="checkbox"><input type="checkbox" name="checkbox" id="checkbox" /> I promise to answer myself without help from anyone</label>
         </div>
         <div class="proceed">
-          <button disabled>PROCEED</button>
+          <button class="proceed-btn" disabled>PROCEED</button>
         </div>
       </div>
     </main>
