--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -30,9 +30,9 @@
       </div>
       <div class="difficulties-container">
         <p>Select difficulty level:</p>
-        <button class="easy-btn">Easy</button>
-        <button class="medium-btn">Medium</button>
-        <button class="hard-btn">Hard</button>
+        <label class="easy-btn"><input type="radio" name="diffRadio" />Easy</label>
+        <label class="medium-btn"><input type="radio" name="diffRadio" />Medium</label>
+        <label class="hard-btn"><input type="radio" name="diffRadio" />Hard</label>
       </div>
       <div class="footer">
         <div class="checkbox-container">
