--- a/quiz.html
+++ b/quiz.html
@@ -42,6 +42,7 @@
     <div class="question-counter">
       <p>QUESTION <span class="score">1</span><span style="color: #b51289"> / 10</span></p>
     </div>
+    <script src="./assets/js/questions.js"></script>
     <script src="./assets/js/script-quiz.js"></script>
   </body>
 </html>
