radio buttons selection fixed

--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Questions Page</title>
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjPkfTSbix4g4EPv42EinPjh0XLddeKySRbA&s" />
     <link rel="stylesheet" href="./assets/css/style-quiz.css" />
   </head>
 
