--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome Page</title>
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjPkfTSbix4g4EPv42EinPjh0XLddeKySRbA&s" />
     <link rel="stylesheet" href="./assets/css/welcome-page-style.css" />
   </head>
 
@@ -29,14 +30,16 @@
         </ul>
       </div>
       <div class="difficulties-container">
-        <p>Select difficulty level:</p>
-        <label class="easy-btn"><input type="radio" name="diffRadio" />Easy</label>
-        <label class="medium-btn"><input type="radio" name="diffRadio" />Medium</label>
-        <label class="hard-btn"><input type="radio" name="diffRadio" />Hard</label>
+        <h3>Select difficulty level:</h3>
+        <label class="easy-btn selected"><input type="radio" name="diffRadio" value="easy" checked />Easy</label>
+        <label class="medium-btn"><input type="radio" name="diffRadio" value="medium" />Medium</label>
+        <label class="hard-btn"><input type="radio" name="diffRadio" value="hard" />Hard</label>
       </div>
       <div class="footer">
         <div class="checkbox-container">
-          <label for="checkbox"><input type="checkbox" name="checkbox" id="checkbox" /> I promise to answer myself without help from anyone</label>
+          <label for="checkbox" id="checkbox-label"
+            ><input type="checkbox" name="checkbox" id="checkbox" /> I promise to answer myself without help from anyone</label
+          >
         </div>
         <div class="proceed">
           <button class="proceed-btn" disabled>PROCEED</button>
