--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="difficulties-container">
         <h3>Select difficulty level:</h3>
-        <label class="easy-btn selected"><input type="radio" name="diffRadio" value="easy" checked />Easy</label>
+        <label class="easy-btn"><input type="radio" name="diffRadio" value="easy" checked />Easy</label>
         <label class="medium-btn"><input type="radio" name="diffRadio" value="medium" />Medium</label>
         <label class="hard-btn"><input type="radio" name="diffRadio" value="hard" />Hard</label>
       </div>
