modiffiche importanti al file js css html

--- a/index.results.html
+++ b/index.results.html
@@ -28,9 +28,10 @@
           <!-- CIRCLE -->
           <div class="chart-container">
             <canvas id="resultChart"></canvas>
-          </div>
-           <div class="respose" >
-           <!--  <p class="congratulations">congratualtion! asda dadsdas sfasdfadas afsdfsadfas</p> -->
+             <!-- msg Congratulation! -->
+          <div id="exam-result-container">
+            <div class="response"></div>
+        </div>
           </div>
           <!-- WRONG -->
           <div class="false">
