--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -35,6 +35,14 @@
         <label class="medium-btn"><input type="radio" name="diffRadio" value="medium" />Medium</label>
         <label class="hard-btn"><input type="radio" name="diffRadio" value="hard" />Hard</label>
       </div>
+
+      <div class="question-length">
+        <h3>Select how many questions:</h3>
+        <label class="length-btn10"><input type="radio" name="lengthRadio" value="10" checked />10</label>
+        <label class="length-btn20"><input type="radio" name="lengthRadio" value="20" />20</label>
+        <label class="length-btn30"><input type="radio" name="lengthRadio" value="30" />30</label>
+      </div>
+
       <div class="footer">
         <div class="checkbox-container">
           <label for="checkbox" id="checkbox-label"
