--- a/quiz.html
+++ b/quiz.html
@@ -41,7 +41,7 @@
       </div>
     </main>
     <div class="question-counter">
-      <p>QUESTION <span class="score">1</span><span style="color: #b51289"> / 10</span></p>
+      <p>QUESTION <span class="score">1</span><span class="number-q"> / 10</span></p>
     </div>
     <script src="./assets/js/questions.js"></script>
     <script src="./assets/js/script-quiz.js"></script>
