--- a/index.results.html
+++ b/index.results.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Assets/css/reasults.css" />
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjPkfTSbix4g4EPv42EinPjh0XLddeKySRbA&s" />
+    <link rel="stylesheet" href="assets/css/results.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Result Page</title>
   </head>
   <body>
-    <script src="assets/JavaSript/results_script.js"></script>
     <main class=>
       <div class="logo">
-        <img src="./img/epicode_logo.png" alt="logoEpicode" />
+        <img src="./assets/img/epicode_logo.png" alt="logoEpicode" />
       </div>
       <div class="title">
         <h1>Results</h1>
@@ -28,10 +28,10 @@
           <!-- CIRCLE -->
           <div class="chart-container">
             <canvas id="resultChart"></canvas>
-             <!-- msg Congratulation! -->
-          <div id="exam-result-container">
-            <div class="response"></div>
-        </div>
+            <!-- msg Congratulation! -->
+            <div id="exam-result-container">
+              <div class="response"></div>
+            </div>
           </div>
           <!-- WRONG -->
           <div class="false">
@@ -40,11 +40,12 @@
             <p id="wrong-answers">0/6 questions</p>
           </div>
         </div>
-
+        
         <div class="rateUs">
           <button>RATE US</button>
         </div>
       </div>
     </main>
+    <script src="assets/js/results_script.js"></script>
   </body>
 </html>
