--- a/index.feedbackpage.html
+++ b/index.feedbackpage.html
@@ -38,7 +38,7 @@
       </div>
       <div class="feedback">
         <div class="write">
-            <input type="text" placeholder="Write your comment here">
+            <input class="write" type="text" placeholder="Write your comment here">
         </div>
         <hr />
       </div>
@@ -47,7 +47,7 @@
       </div>
       <div class="moreinfo">
         <a href="https://epicode.com/it/candidati/?utm_source=googleads&utm_campaign=brand&utm_adgroup=brandphrase&utm_term=epicode&utm_campaign=Brand&utm_source=adwords&utm_medium=ppc&hsa_acc=1246633295&hsa_cam=11897141170&hsa_grp=115607542316&hsa_ad=717726046297&hsa_src=g&hsa_tgt=kwd-1083842420863&hsa_kw=epicode&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=CjwKCAjwwLO_BhB2EiwAx2e-30IdUSqVAOcUg_sGnaMX1BHA7970x8KgGwnxFHBAw5bIGHG_eiThLxoCO2UQAvD_BwE">
-        <button type="submit">MORE INFO</button></a>
+        <button id="more" type="submit">MORE INFO</button></a>
       </div>
     </main>
   </body>
