--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -26,7 +26,7 @@
         <ul>
           <li>Each question is <span class="highlighted">timed</span> and can only be <span class="highlighted">answered once.</span></li>
           <li>Changing browser tab or opening other windows will <span class="highlighted">invalidate the question.</span></li>
-          <li>This exam will take approx. <span class="highlighted">0-5 minutes.</span></li>
+          <li>This exam will take approx. <span class="highlighted change"></span></li>
         </ul>
       </div>
       <div class="difficulties-container">
