--- a/index.feedbackpage.html
+++ b/index.feedbackpage.html
@@ -38,7 +38,7 @@
       </div>
       <div class="feedback">
         <div class="write">
-            <input class="write" type="text" placeholder="Write your comment here">
+            <input class="write" type="text" placeholder="Write your comment here" maxlength="300">
         </div>
         <hr />
       </div>
