welcome page fixed

--- a/welcome-page-index.html
+++ b/welcome-page-index.html
@@ -31,14 +31,14 @@
       </div>
       <div class="difficulties-container">
         <h3>Select difficulty level:</h3>
-        <label class="easy-btn"><input type="radio" name="diffRadio" value="easy" checked />Easy</label>
+        <label class="easy-btn selected"><input type="radio" name="diffRadio" value="easy" checked />Easy</label>
         <label class="medium-btn"><input type="radio" name="diffRadio" value="medium" />Medium</label>
         <label class="hard-btn"><input type="radio" name="diffRadio" value="hard" />Hard</label>
       </div>
 
       <div class="question-length">
         <h3>Select how many questions:</h3>
-        <label class="length-btn10"><input type="radio" name="lengthRadio" value="10" checked />10</label>
+        <label class="length-btn10 selected2"><input type="radio" name="lengthRadio" value="10" checked />10</label>
         <label class="length-btn20"><input type="radio" name="lengthRadio" value="20" />20</label>
         <label class="length-btn30"><input type="radio" name="lengthRadio" value="30" />30</label>
       </div>
