--- a/index.feedbackpage.html
+++ b/index.feedbackpage.html
@@ -30,7 +30,7 @@
         <img class="star" data-value="9" src="./assets/img/star.svg" alt="Stella 9">
         <img class="star" data-value="10" src="./assets/img/star.svg" alt="Stella 10">
     </div>
-    <p id="selected-rating">Hai selezionato: <span id="rating-value">0</span></p>
+    <!-- <p id="selected-rating">Hai selezionato: <span id="rating-value">0</span></p> -->
 
       </div>  
       <div class="lastTitle">
@@ -38,7 +38,7 @@
       </div>
       <div class="feedback">
         <div class="write">
-            <input class="write" type="text" placeholder="Write your comment here" maxlength="300">
+            <input class="write" type="text" placeholder="Write your comment here" maxlength="100">
         </div>
         <hr />
       </div>
