modiffiche feedbakc imput e misure log generale

--- a/index.feedbackpage.html
+++ b/index.feedbackpage.html
@@ -36,11 +36,13 @@
       <div class="lastTitle">
         <h3>Leave us an open feedback about your experience so far</h3>
       </div>
-      <div class="feedback">
-        <div class="write">
-            <input class="write" type="text" placeholder="Write your comment here" maxlength="300">
+      <div class="feed">
+        <div class="feedback">
+          <div class="write">
+              <input type="text" placeholder="Write your comment here" maxlength="300">
+          </div>
+          <hr />
         </div>
-        <hr />
       </div>
       <div class="submit">
         <button id="submit-button" type="button">SUBMIT</button>
